// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/RadioGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:re:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rf:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rd:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rf:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rg:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rd:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rg:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rh:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rd:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rh:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rc:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup VariantHorizontal smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rk:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK RadioGroup_radioGroupItemContainer_horizontal__CuruZ">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rl:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rj:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rl:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rm:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rj:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rm:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rn:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rj:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rn:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ri:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlId"
            data-testid="123ID"
            class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le dummyClassname"
            lang="nb"
            form="123form"
  >
    <legend id="legendId-:r8:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r9:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r7:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r9:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:ra:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r7:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:ra:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rb:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r7:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rb:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r6:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r3l:"
            class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu dummyClassname"
    >
      Type virksomhet
    </legend>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r3l:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3m:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3m:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw   dummyClassname">
      beskrivelse
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3n:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3k:"
                 aria-describedby="radioErrorId-:r3j:"
                 aria-invalid="true"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3n:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3o:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3k:"
                 aria-describedby="radioErrorId-:r3j:"
                 aria-invalid="true"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3o:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3p:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3k:"
                 aria-describedby="radioErrorId-:r3j:"
                 aria-invalid="true"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3p:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r3j:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="ErrorMessage_errorMessage__508oW RadioGroup_errorMessage__LCaF+ dummyClassname">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
          <p class="ErrorMessage_errorMessageText__e27TU">
            feil
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r16:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r17:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r15:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r17:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r18:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r15:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r18:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r19:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r15:"
                 value="annet"
                 checked
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r19:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r14:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r34:"
            class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
    >
      Type virksomhet
    </legend>
    <div class="Help_description__niabw">
      Vi trenger å vite din type virksomhet.
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r35:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r33:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r35:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r36:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r33:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r36:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r37:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r33:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r37:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r32:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le"
            disabled
  >
    <legend id="legendId-:r1c:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1d:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1b:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1d:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1e:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1b:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1e:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1f:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1b:"
                 value="annet"
                 checked
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1f:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1a:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2g:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2h:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2f:"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2h:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2i:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2f:"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2i:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2j:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2f:"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 value="annet"
                 checked
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2j:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2e:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="ErrorMessage_errorMessage__508oW RadioGroup_errorMessage__LCaF+">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
          <p class="ErrorMessage_errorMessageText__e27TU">
            Feilmelding
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessageAndAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2n:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2o:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2m:"
                 aria-describedby="konsumentId radioErrorId-:r2l:"
                 aria-invalid="true"
                 value
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2o:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2l:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="ErrorMessage_errorMessage__508oW RadioGroup_errorMessage__LCaF+">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
          <p class="ErrorMessage_errorMessageText__e27TU">
            Feilmelding
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r3a:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3b:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r39:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3b:"
          >
            Radio har blitt klikket på
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r38:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHelpText play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2s:"
            class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
    >
      Type virksomhet
    </legend>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r2s:"
            aria-expanded="true"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2t:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2t:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_helpBox__nbhjO  undefined">
      <span class="Help_helpBoxText__j6sH7">
        Vi trenger å vite din type virksomhet.
      </span>
      <button class="IconButton_button__mw9sG IconButton_button_small__etst4  Help_helpBoxCloseButton__RueX2"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r31:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r31:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2u:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2r:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2u:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2v:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2r:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2v:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r30:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r2r:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r30:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2q:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r3e:"
            class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
    >
      Type virksomhet
    </legend>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r3e:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3f:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3f:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3g:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3d:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3g:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3h:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3d:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3h:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3i:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r3d:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3i:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r3c:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rq:"
            class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rr:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rp:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rr:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rs:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rp:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rs:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:rt:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rp:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:rt:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithName play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r24:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r25:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="nameFraKonsument"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r25:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r26:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="nameFraKonsument"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r26:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r27:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="nameFraKonsument"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r27:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r22:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r2:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r3:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r3:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r4:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r4:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r5:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r5:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequired play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r1i:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1j:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1h:"
                 required
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1j:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1k:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1h:"
                 required
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1k:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1l:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1h:"
                 required
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1l:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1g:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r1o:"
            class="Fieldset_legend__8odl- Fieldset_legend_required__U4xWm"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1p:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1n:"
                 required
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1p:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1q:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1n:"
                 required
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1q:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1r:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1n:"
                 required
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1r:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1m:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMarkAndLegendAsMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r1u:"
            class="Fieldset_legend__8odl- Fieldset_legendWithMarkup_required__WcdUI"
    >
      <h4 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Type virksomhet
      </h4>
      <span>
        Med virksomhet så menes bla bla
      </span>
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r1v:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1t:"
                 required
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r1v:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r20:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1t:"
                 required
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r20:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r21:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r1t:"
                 required
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r21:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1s:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithSelectedValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r10:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r11:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rv:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r11:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r12:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rv:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r12:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r13:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:rv:"
                 value="annet"
                 checked
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r13:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ru:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithoutErrorMessage play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2a:"
            class="Fieldset_legend__8odl-"
    >
      Type virksomhet
    </legend>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="RadioGroup_radioGroupItemContainer__AINZK">
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2b:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r29:"
                 value="foretak"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2b:"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2c:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r29:"
                 value="selskap"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2c:"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="Radio_radio__Fh+3R">
          <input id="radioInputId-:r2d:"
                 class="Radio_radioInput__gTlv0"
                 type="radio"
                 name="radioInputName-:r29:"
                 value="annet"
          >
          <label class="Radio_radioLabel__lJQhF"
                 for="radioInputId-:r2d:"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r28:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
